// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should build a form 1`] = `
<div>
  <p>
    NoValues
  </p>
  <p>
    ControlSelect
  </p>
  <p>
    ControlSelect
  </p>
  <p>
    ControlCheckboxes
  </p>
  <p>
    ControlMultiSelect
  </p>
  <p>
    ControlRange
  </p>
  <p>
    NoValues
  </p>
</div>
`;

exports[`should display no values message 1`] = `
<div>
  <p>
    NoValues
  </p>
</div>
`;
